sacando info empresa

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     .view {
       height: 100%;
     }
+    .intro-section {
+      height: 85%;
+    }
     @media (max-width: 450px) {
       html,
       body,
@@ -140,12 +143,13 @@
 
     </nav>
   
-    <section class="layout-hero text-light text-center d-flex">
+    <section class=" intro-section layout-hero text-light text-center d-flex">
       <div class="container align-self-end py-2">
          
           <div class="col-md-6 offset-3 align-bottom ">
             <img src="img/svg/ciudad 1.svg" alt="">
           </div>
+
       </div>
     </section>
 
@@ -155,87 +159,11 @@
   <!-- Main layout -->
   <main>
 
-    <div class="container-fluid" style="background-color: #323438;">
-
-    
-
-      <!-- First container -->
-      <div class="container pt-3">
-
-        <!-- Section About -->
-        <section id="about" class="section pt-2 pb-5">
-
-          <!-- Secion heading -->
-          <h1 class="text-center white-text text-uppercase font-weight-bold mt-5 mb-3 mt-4 wow fadeIn"
-            data-wow-delay="0.2s">La Empresa</h1>
-
-          <!-- Section description -->
-          <p class="text-center white-text text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">All about
-
-            my passion</p>
-
-          <div class="line wow fadeIn" data-wow-delay="0.2s"></div>
-
-          <!-- First row -->
-          <div class="row mt-5 pt-5">
-
-            <!-- First column -->
-            <div class="col-lg-5 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-
-              <!-- Image -->
-              <img src="https://mdbootstrap.com/img/Others/121.jpg" class="img-fluid z-depth-1" alt="My photo">
-
-            </div>
-            <!-- First column -->
-
-            <!-- Second column -->
-            <div class="col-lg-6 offset-lg-1 col-md-12 wow fadeIn" data-wow-delay="0.4s">
-
-              <!-- Description -->
-              <p class="grey-text mb-4" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo
-
-                animi soluta ratione quisquam, dicta ab cupiditate iure eaque? Repellendus voluptatum, magni impedit
-
-                eaque delectus, beatae maxime temporibus maiores quibusdam quasi.Rem magnam ad perferendis iusto sint
-
-                tempora ea voluptatibus iure, animi excepturi modi aut possimus in hic molestias repellendus illo ullam
-
-                odit quia velit. Rem magnam ad perferendis iusto sint tempora ea voluptatibus iure, animi excepturi
-
-                modi aut possimus in hic molestias repellendus illo ullam odit quia velit. Qui expedita sit quo,
-
-                maxime.</p>
-
-              <a class="btn btn btn-outline-white waves-effect">Read more</a>
-
-            </div>
-            <!-- Second column -->
-
-          </div>
-          <!-- First row -->
-
-        </section>
-        <!-- Section About -->
-
-      </div>
-
-    </div>
-    <!-- First container -->
-
     <!-- Second container -->
     <div class="container">
 
       <!-- Second section -->
       <section id="services" class="section feature-box pt-3 pb-4">
-
-        <!-- Secion heading -->
-        <h1 class="text-center text-uppercase font-weight-bold  mt-5 mb-3 mt-4 wow fadeIn" data-wow-delay="0.2s">
-          Servicios</h1>
-
-        <!-- Section description -->
-        <p class="text-center  text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">Servicions que ofrecemos</p>
-
-        <div class="line  wow fadeIn" data-wow-delay="0.2s"></div>
 
         <!-- First row -->
         <div class="row my-5 pt-4 wow fadeIn" data-wow-delay="0.2s">
@@ -251,11 +179,7 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">TASACIONES</strong></h6>
-
-              <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
-                amet
-                numquam iure provident.</p>
+              <h6 class="font-weight-bold mb-3 pb-3">TASACIONES</h6>
 
             </div>
 
@@ -272,11 +196,7 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">VENTA DE PROPIEDADES</strong></h6>
-
-              <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
-                amet
-                numquam iure provident.</p>
+              <h6 strong class="font-weight-bold mb-3 pb-3">VENTA DE <br> PROPIEDADES</h6>
 
             </div>
 
@@ -293,11 +213,8 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">ALQUILER DE PROPIEDADES</strong></h6>
+              <h6 strong class="font-weight-bold mb-3 pb-3">ALQUILER DE <br> PROPIEDADES</h6>
 
-              <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
-                amet
-                numquam iure provident.</p>
 
             </div>
 
@@ -314,11 +231,8 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">ADMINISTRACION DE ALQUILERES</strong></h6>
+              <h6 strong class="font-weight-bold mb-3 pb-3">ADMINISTRACION DE ALQUILERES</h6>
 
-              <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
-                amet
-                numquam iure provident.</p>
 
             </div>
 
@@ -348,16 +262,6 @@
           <p class="text-center w-responsive mx-auto text-uppercase font-weight-bold wow fadeIn" data-wow-delay="0.2s">
             Algunas de nuestras propiedades</p>
 
-          <div class="line line-v2 wow fadeIn" data-wow-delay="0.2s"></div>
-
-          <!-- Section description -->
-          <p class="text-center w-responsive mx-auto my-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-
-            Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-
-            eum porro a pariatur accusamus veniam. At ab ea a molestiae corrupti numquam quo beatae minima ratione
-
-            magni accusantium repellat eveniet quia vitae.</p>
 
           <!-- First row -->
           <div class="row ml-3 mr-3 pb-4 pt-1 wow fadeIn" data-wow-delay="0.4s">
@@ -526,22 +430,6 @@
   </main>
   <!-- Main layout -->
 
-  <!-- Scrollspy -->
-  <div class="dotted-scrollspy clearfix d-none d-sm-block">
-
-    <ul class="nav smooth-scroll flex-column">
-
-      <li class="nav-item"><a class="nav-link" href="#home"><span></span></a></li>
-
-      <li class="nav-item"><a class="nav-link" href="#about"><span></span></a></li>
-
-      <li class="nav-item"><a class="nav-link" href="#services"><span></span></a></li>
-
-      <li class="nav-item"><a class="nav-link" href="#portfolio"><span></span></a></li>
-
-    </ul>
-
-  </div>
 
   <!-- Footer -->
   <footer class="page-footer text-center text-md-left mt-5  elegant-color-dark">
