--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <hr>
                     <p>Todos los alquileres que estas buscando encontralos acá.</p>
                       <hr>
-                      <i class="fas fa-chevron-circle-right"></i>
+                      <a href="/html/listado-propiedades.html"><i class="fas fa-chevron-circle-right"></i></a>
                   </div>
                 </div>
                 <!-- Back Side -->
