--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -152,7 +152,7 @@
                       
                   </div>
                 <div class="row no-gutters">
-                    <div class="card col-lg-3 mx-2 my-2 text-center" v-for="propiedad in propiedadesComputadas">
+                    <div class="card col-lg-3 col-md-3 col-sm-5 mx-2 my-2 text-center" v-for="propiedad in propiedadesComputadas">
                         <div class="view">
                           <!-- Card image -->
                           <img v-bind:src="propiedad.imagen" alt="Card image cap" class="card-img-top">
