agregando imagen inferior

--- a/index.html
+++ b/index.html
@@ -506,33 +506,18 @@
     </div>
     <!-- Third container -->
 
-    <!-- Streak -->
-    <div class="streak streak-photo streak-md"
-      style="background-image:url('https://mdbootstrap.com/img/Photos/Horizontal/City/12-col/img%20%2822%29.jpg')">
-
-      <div class="mask flex-center rgba-stylish-strong">
-
-        <div class="white-text smooth-scroll wow fadeIn" data-wow-delay="0.2s">
-
-          <h3 class="text-center h3-responsive mb-5"><i class="fas fa-quote-left" aria-hidden="true"></i>
-            Enfocados en el cliente. Impulsados por los resultados
-            <i class="fas fa-quote-right" aria-hidden="true"></i></h3>
-
-          <h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Ariel Sauret Negocios Inmobiliarios</h5>
-
-        </div>
-
-      </div>
-
-    </div>
-    <!-- Streak -->
+   <div class="container-fluid" style="background-color: #e8eaec;">
+     <div class="col-md-6 offset-md-3">
+       <img src="img/svg/ciudad 2.svg" alt="">
+     </div>
+   </div>
 
   </main>
   <!-- Main layout -->
 
 
   <!-- Footer -->
-  <footer class="page-footer text-center text-md-left mt-5  elegant-color-dark">
+  <footer class="page-footer text-center text-md-left elegant-color-dark">
 
     <!-- Footer Links -->
     <div class="container mb-2">
