--- a/html/propiedad.html
+++ b/html/propiedad.html
@@ -119,10 +119,10 @@
   
   <!-- Main layout -->
   <main>
-    <div class="container-fluid" style="background-color: #323438;">
+    <div class="container-fluid" style="background-color: whitesmoke;">
       <div class="row mt-5 pt-5"> 
 
-        <div class="col-md-7">
+        <div class="col-md-5">
           <div class="card px-2 py-2">
             <section id="layout-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -136,7 +136,7 @@
               </ol>
             <section class="carousel-inner">
               <div class="carousel-item active">
-                <img class="img-fluid d-block" src="../img/as-prop/propiedades/001/casa.jose.001.jpg" alt="Carousel 1">
+                <img class="img-fluid d-block " src="../img/as-prop/propiedades/001/casa.jose.001.jpg" alt="Carousel 1">
               </div>
               <div class="carousel-item">
                 <img class="img-fluid d-block" src="../img/as-prop/propiedades/001/casa.jose.002.jpg" alt="Carousel 2">
