--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </nav>
   
     <section class=" intro-section layout-hero text-light text-center d-flex">
-      <div class="container align-self-end py-2">
+      <div class="container align-self-end pt-2">
          
           <div class="col-md-6 offset-3 align-bottom ">
             <img src="img/svg/ciudad 1.svg" alt="">
