--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section class=" intro-section layout-hero text-light text-center d-flex">
       <div class="container align-self-end pt-2">
          
-          <div class="col-md-6 offset-3 align-bottom ">
+          <div class="col-md-6 offset-md-3 align-bottom ">
             <img src="img/svg/ciudad 1.svg" alt="">
           </div>
 
