agregando texto heading

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link href="../css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="../css/mdb.min.css" rel="stylesheet">
+  <!-- Google fonts Pacifico cursive -->
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 
   <style>
     html,
@@ -61,6 +63,10 @@
 
     .flex-fill {
       flex: 1 1 auto;
+    }
+
+    .pacifico {
+      font-family: 'Pacifico', cursive;
     }
 
   </style>
@@ -145,6 +151,11 @@
   
     <section class=" intro-section layout-hero text-light text-center d-flex">
       <div class="container align-self-end pt-2">
+
+          <div class="container-flex col-md-8 text-left pacifico white-text">
+            <h1>Encontrá</h1>
+            <h1>tu lugar en el mundo</h1>
+          </div>
          
           <div class="col-md-6 offset-md-3 align-bottom ">
             <img src="img/svg/ciudad 1.svg" alt="">
