--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -148,8 +148,10 @@
                           </div>
                       </div>
                       <!--/Dropdown barrio-->
-
-                      <button class=" col-md-3 btn btn-primary" type="button" aria-haspopup="true" aria-expanded="false" @click="reiniciar">REINICIAR</button>
+                      <div class="col-md-4">
+                        <button class="btn btn-danger align-right" type="button" aria-haspopup="true" aria-expanded="false"
+                        @click="reiniciar">REINICIAR</button>
+                      </div>                      
 
                       
                   </div>
