--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -114,10 +114,10 @@
           <!-- VUE -->
           <div id="app">
             <!-- First container -->
-            <div class="container pt-3">
+            <div class="container-fluid ml-2 pt-3">
 
-              <h3 class="text-left black-text mb-3 mt-5 wow fadeIn"
-              data-wow-delay="0.2s">{{propiedadesEncontradas}}</h3>
+              <h5 class="text-left black-text mb-3 mt-5 wow fadeIn"
+              data-wow-delay="0.2s">{{propiedadesEncontradas}}</h5>
             </div>
   
               <div>
@@ -300,8 +300,8 @@
          },
          propiedadesEncontradas: function() {
           let cantidad = this.propiedadesComputadas.length 
-          return cantidad > 1 ? cantidad + ' propiedades encontradas' :
-                 cantidad + ' propiedad encontrada';
+          return cantidad == 1 ? cantidad + ' propiedad encontrada' :
+                 cantidad + ' propiedades encontradas';
          }
       },
       methods: {
