--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h1>tu lugar en el mundo</h1>
           </div>
          
-          <div class="col-md-6 offset-md-3 align-bottom ">
+          <div class="col-md-6 offset-md-3 align-bottom wow fadeIn">
             <img src="img/svg/ciudad 1.svg" alt="">
           </div>
 
@@ -517,8 +517,8 @@
     </div>
     <!-- Third container -->
 
-   <div class="container-fluid" style="background-color: #e8eaec;">
-     <div class="col-md-6 offset-md-3">
+   <div class="container-fluid wow fadeIn" style="background-color: #e8eaec;">
+     <div class="col-md-4 offset-md-4">
        <img src="img/svg/ciudad 2.svg" alt="">
      </div>
    </div>
