--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="../css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="../css/mdb.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="video.css">
+  <!-- Custom css -->
+  <link rel="stylesheet" href="/css/style.css">
   <!-- Muli google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <style>
