--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -158,8 +158,8 @@
 
                     
                 </div>
-                <div class="row no-gutters">
-                  <div class="card col-lg-3 col-md-3 col-sm-5 mx-2 my-2 text-center" v-for="propiedad in propiedadesComputadas">
+                <div class="row no-gutters px-5 ml-5">
+                  <div class="card col-xl-2 col-lg-3 col-md-3 col-sm-5 mx-2 my-2 text-center" v-for="propiedad in propiedadesComputadas">
                     <div class="view">
                       <!-- Card image -->
                       <img v-bind:src="propiedad.imagen" alt="Card image cap" class="card-img-top">
