--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -202,13 +202,10 @@
                           <section id="layout-carousel" class="carousel slide" data-ride="carousel">
                           <section class="carousel-inner">
                             <div class="carousel-item active">
-                              <img class="img-fluid d-block " src="../img/as-prop/propiedades/001/casa.jose.001.jpg" alt="Carousel 1">
+                              <img class="img-fluid d-block " :src="propiedadSeleccionada.carousel[0]" alt="Carousel 1">
                             </div>
-                            <div class="carousel-item">
-                              <img class="img-fluid d-block" src="../img/as-prop/propiedades/001/casa.jose.002.jpg" alt="Carousel 2">
-                            </div>
-                            <div class="carousel-item">
-                              <img class="img-fluid d-block" src="../img/as-prop/propiedades/001/casa.jose.003.jpg" alt="Carousel 3">
+                            <div class="carousel-item" v-for="imagen in carouselMenosUno">
+                              <img class="img-fluid d-block" :src="imagen" alt="Carousel 2">
                             </div>
                           </section>
                           </section>
@@ -400,6 +397,9 @@
           let cantidad = this.propiedadesComputadas.length 
           return cantidad == 1 ? cantidad + ' propiedad encontrada' :
                  cantidad + ' propiedades encontradas';
+         },
+         carouselMenosUno: function() {
+           return this.propiedadSeleccionada.carousel.slice(1);
          }
       },
       methods: {
