--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -194,7 +194,7 @@
 
               <!-- Detalle Propiedad -->
               <div v-else>
-                <div class="container-fluid" style="background-color: whitesmoke;">
+                <div>
                     <div class="row mt-5 pt-5"> 
               
                       <div class="col-md-5">
@@ -251,9 +251,7 @@
                         <div class="col-md-8">
                           <div class="card my-2 px-3 py-2">
                             <h4 class="font-weight-bold">Descripción</h4>
-                            <div>
-                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione culpa voluptate officia, qui doloribus vitae necessitatibus. Pariatur ipsum reprehenderit, dolore, alias architecto modi consequuntur, minima exercitationem accusantium quisquam quo soluta.
-                            </div>
+                            <div>{{propiedadSeleccionada.descripcion}}</div>
                           </div>
                         </div>
               
