--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </header>
     
     <row class="row rowoverlay">
-      <img class="col-md-4 offset-md-4 align-bottom" src="/img/svg/ciudad 1.svg" >
+      <img class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-6 align-bottom" src="/img/svg/ciudad 1.svg" >
     </row>
 
     <!-- Second container -->
@@ -377,7 +377,7 @@
   
                     </a>
   
-                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Casa Jose</p>
+                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Martin Coronado</p>
   
                   </figure>
   
@@ -442,7 +442,7 @@
   
                     </a>
   
-                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Surra</p>
+                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Villa Bosch</p>
   
                   </figure>
   
@@ -455,7 +455,7 @@
   
                     </a>
   
-                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Monet</p>
+                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Cardales</p>
   
                   </figure>
   
@@ -468,7 +468,7 @@
   
                     </a>
   
-                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Verna</p>
+                    <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Villa Bosch</p>
   
                   </figure>
   
