--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     header,
     .propiedades {
       border-radius: initial;
-      mask-image: none;
-      -webkit-border-radius: 10px;
+      mask-image: none; 
       -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
-    }
+      }
 
     .propiedades {
       background-color: #212529;
@@ -82,8 +81,11 @@
   </style>
 </head>
 <body>
+    <img class="svg" src="img/svg/ciudad 1.svg" alt="">
+   
 
     <header>
+      
 
       <!-- Navbar -->
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top scrolling-navbar">
@@ -158,27 +160,26 @@
       </nav>
       <!-- Navbar -->
 
+
       <div class="overlay" ></div>
       <div class="container mt-5">
-      <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="/img/video.mp4" type="video/mp4">
-      </video>
-      <div class="container h-100">
-        <div class="d-flex h-100 text-center align-items-center align-text-bottom">
-          <div class="w-100 text-white pt-5 text-left font-weight-bold black-text">
-            <h1 class="display-3">Encontrá</h1>
-            <h1 class="display-3">tu lugar en el mundo</h1>
-          </div>
-        </div>
+        <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+          <source src="/img/video.mp4" type="video/mp4">
+        </video>
       </div>
+
+      <div class="div-titulo">
+        <div class="div-h1">
+          <h1 class="titulo font-weight-bold">Encontrá</h1>
+        </div>
+        <div class="div-h1">
+          <h1 class="titulo font-weight-bold">tu lugar en el mundo</h1>
+        </div>
       </div>
 
     </header>
     
-    <row class="row rowoverlay">
-      <img class="col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-6 align-bottom" src="/img/svg/ciudad 1.svg" >
-    </row>
-
+ 
     <!-- Second container -->
     <div class="container">
 
