--- a/html/contacto.html
+++ b/html/contacto.html
@@ -72,6 +72,12 @@
   
             <!-- Social Icon  -->
             <ul class="navbar-nav nav-flex-icons">
+              
+              <li class="nav-item">
+    
+                <a class="nav-link"><i class="fab fa-whatsapp"></i></a>
+  
+              </li>
   
               <li class="nav-item">
   
