--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -96,6 +96,12 @@
 
             <!-- Social Icon  -->
             <ul class="navbar-nav nav-flex-icons">
+              
+              <li class="nav-item">
+    
+                <a class="nav-link"><i class="fab fa-whatsapp"></i></a>
+  
+              </li>
 
               <li class="nav-item">
 
