--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -430,7 +430,7 @@
         tipoPropiedadSeleccionada: 'Todas las propiedades',
         propiedades: propiedades,
         barrios: ['Todos los barrios', 'Palomar', 'Villa Bosch', 'Ramos Mejia', 'San Martin'],
-        tipoPropiedades: ['Todas las propiedades','Chalet', 'Casa', 'PH', 'Dpto.'],
+        tipoPropiedades: ['Todas las propiedades','Chalet', 'Casa', 'PH', 'Dpto.', 'Terreno'],
       },
       computed: {
         propiedadesComputadas: function() {
